Add  JWT and swagger integration
