# api/swagger/swagger.yaml
@@ -10,6 +10,11 @@ securityDefinitions:
     type: apiKey
     name: Authorization
     in: header
+  apiKey:
+    description: OpenStack Keystone Authentication
+    type: apiKey
+    name: Authorization
+    in: header    
   basicAuth:
     type: basic
 
@@ -52,7 +57,6 @@ paths:
         - Bearer: []
       x-security-scopes:
         - admin
-        - user    
       description: Returns 'Hello' to the caller
       # used as the method name of the controller
       operationId: hello
@@ -81,6 +85,8 @@ paths:
     x-swagger-router-controller: hello
     get: 
       description: Returns 'Hello' to the caller
+      security:
+        - apiKey: []      
       # used as the method name of the controller
       operationId: hello
       parameters:
@@ -251,7 +257,7 @@ paths:
     post:   
       summary: login
       security:
-        - Bearer: []
+        - basicAuth: []
       x-security-scopes:
         - admin
         - user    
