# server/auth/index.js
@@ -1,6 +1,12 @@
+
+const { verifyToken, issueToken } = require('./auth')
 const validate = (username, password) => {
   return { username, password };
 };
 
 
-module.exports.validate = validate;
+module.exports = {
+  validate: validate,
+  issueToken: issueToken,
+  verifyToken: verifyToken,
+}
